# matching-engine

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  client.cpp  client_main.cpp  main.cpp  server.cpp  server_main.cpp
client/: CMakeLists.txt
client/include/matchingengine/: parser.h
client/src/matchingengine/: main.cpp
core/: CMakeLists.txt
core/include/matchingengine/: ring_buffer.h  types.h
core/include/matchingengine/protocol/: header.h  message.h  serialize_helper.h
core/include/matchingengine/protocol/admin/: login.h
core/include/matchingengine/protocol/info/: error.h  info.h
core/include/matchingengine/protocol/trading/: add_order.h  cancel_order.h  modify_order.h  trade.h
core/include/matchingengine/protocol/view/: get_book.h  get_orders.h
core/include/matchingengine/tcp/: client.h  connection.h  server.h  util.h
core/lib/matchingengine/protocol/: header.cpp  message.cpp
core/lib/matchingengine/protocol/admin/: login.cpp
core/lib/matchingengine/protocol/info/: error.cpp  info.cpp
core/lib/matchingengine/protocol/trading/: add_order.cpp  cancel_order.cpp  modify_order.cpp  trade.cpp
core/lib/matchingengine/protocol/view/: get_book.cpp  get_orders.cpp
core/lib/matchingengine/tcp/: client.cpp  connection.cpp  server.cpp
core/tests/matchingengine/: helpers.h
core/tests/matchingengine/protocol/: header_test.cpp
core/tests/matchingengine/protocol/trading/: add_order_test.cpp  cancel_order_test.cpp  modify_order_test.cpp
core/tests/matchingengine/protocol/view/: get_book_test.cpp  get_orders_test.cpp
gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
gui/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/core/: ring_buffer.h
include/core/protocol/: header.h  message.h  serialize_helper.h
include/core/protocol/trading/: add_order.h  cancel_order.h  modify_order.h  trade.h
include/core/protocol/view/: get_book.h
include/orderbook/: book.h  engine.h  level.h  order.h  shared_counter.h  trade.h
include/tcp/: client.h  connection.h  server.h
server/: CMakeLists.txt
server/include/matchingengine/: engine.h  sql.h
server/include/matchingengine/orderbook/: book.h  level.h  order.h  shared_counter.h  trade.h
server/src/matchingengine/: engine.cpp  main.cpp
server/src/matchingengine/orderbook/: book.cpp  level.cpp  order.cpp  trade.cpp
server/tests/matchingengine/orderbook/: book_test.cpp  level_test.cpp
src/: engine.h
src/book/: book.h  engine.h  level.h  order.h  shared_counter.h  trade.h  types.h
src/common/: add_order.h  header.h  ring_buffer.h  types.h  util.h
src/common/protocol/: header.h  message.h  ring_buffer.h  serialize_helper.h
src/common/protocol/trading/: add_order.h  modify_order.h  trade.h
src/common/protocol/view/: get_book.h
src/core/protocol/: header.cpp  message.cpp
src/core/protocol/trading/: add_order.cpp  cancel_order.cpp  modify_order.cpp  trade.cpp
src/core/protocol/view/: get_book.cpp
src/orderbook/: book.cpp  engine.cpp  order.cpp  trade.cpp
src/server/: client.h  server.h  tcp_connection.h  tcp_server.h
src/tcp/: client.cpp  client.h  connection.cpp  connection.h  header.h  server.cpp  server.h
src/tcp/handlers/: trading.h
src/tcp/protocol/: add_order.h  header.h  types.h
test/: helpers.h
test/book/: book_book_test.cpp  book_level_test.cpp  book_test.cpp  helpers.h  level_test.cpp
test/common/: add_order_test.cpp  header_test.cpp  string_test.cpp
test/common/protocol/: header_test.cpp
test/common/protocol/trading/: add_order_test.cpp  modify_order_test.cpp
test/common/protocol/view/: get_book_test.cpp
test/core/protocol/: header_test.cpp
test/core/protocol/trading/: add_order_test.cpp  cancel_order_test.cpp  modify_order_test.cpp
test/core/protocol/view/: get_book_test.cpp
test/tcp/: header_test.cpp  protocol_add_order_test.cpp  protocol_header_test.cpp  protocol_string_test.cpp  protocol_test.cpp
